Removed photocredit from pic on techshift blog bc it looked weird
Removed photocredit from pic on techshift blog bc it looked weird

--- a/_posts/2019-1-21-TechShift19.md
+++ b/_posts/2019-1-21-TechShift19.md
@@ -4,7 +4,7 @@ title: TechShift Summit 2019
 description: TODO
 author: Cassidy Soutter
 image: /assets/images/blogPics/TechShift19.jpg
-photocredit: Cassidy Soutter
+#photocredit: Cassidy Soutter
 permalink: /TechShift19
 ---
 
