--- a/_posts/2018-11-21-IPI.mkd
+++ b/_posts/2018-11-21-IPI.mkd
@@ -4,7 +4,7 @@ title: "Initiative on Poverty and Inequality Partnership"
 description: During the 2019 Spring Semester, CS+Social Good partnered with IPI to create a website, promoting their mission on UNC's campus.
 author: Abby Brosnan
 # image: 
-permalink: https://github.com/unc-cs-sg/IPI-Website.
+# permalink: 
 tags: partners
 categories: archive
 # image_left: True
